 * DB Upgrade: Added "id" primary key to bug history table.
 * Languages: Updated German localisation.
 * Changed confit option (default_notify_flags): remove 'admin', 'manager', and 'threshold' categories and add 'threshold_min' and 'threshold_max'
 * New config option (email_receive_own): controls whether users receive emails for changes they make
 * New config option (display_bug_padding): controls the level of padding on bug ids
 * New config option (display_bugnote_padding): controls the level of padding on bugnote ids
 * New config option (file_type_icons): provides mapping between file extensions and icons to be used for file types.
 * Removed config option (bugnote_include_file): Used file path directly since there is no reason to make it configurable.
 * Removed config option (bugnote_view_include_file): Used file path directly since there is no reason to make it configurable.
 * Removed config option (bugnote_add_include_file): Used file path directly since there is no reason to make it configurable.
 * Removed config option (history_include_file): Used file path directly since there is no reason to make it configurable.
 * Removed config option (print_bugnote_include_file): Used file path directly since there is no reason to make it configurable.
 * Removed config option (view_all_include_file): Used file path directly since there is no reason to make it configurable.
 * Removed config option (bug_view_inc): Used file path directly since there is no reason to make it configurable.
 * Removed config option (bug_file_upload_inc): Used file path directly since there is no reason to make it configurable.

2003.02.19  -  0.18.0a2

 * Behaviour change: Project documentation is now sorted by title
 * Enhancement: Project name is shown in print_bug_page
 * Fix: #2938: 'Double quotes not handled correctly in manage_custom_field_edit_page' 
 * Fix: handle special characters correctly in the rest of the manage_custom_field_* pages